--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-slot": "^1.2.3",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "i18next": "^25.4.2",
@@ -25,6 +26,7 @@
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "react-tooltip": "^5.29.1",
+    "resend": "^6.0.2",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1"
   },
