--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "i18next": "^25.4.2",
     "lucide-react": "^0.542.0",
     "next": "15.5.0",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-i18next": "^15.7.2",
@@ -27,6 +28,7 @@
     "react-toastify": "^11.0.5",
     "react-tooltip": "^5.29.1",
     "resend": "^6.0.2",
+    "sonner": "^2.0.7",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1"
   },
